--- a/lib/project/environmentvariableswidgetbase.ui
+++ b/lib/project/environmentvariableswidgetbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>859</width>
-            <height>210</height>
+            <width>566</width>
+            <height>399</height>
         </rect>
     </property>
     <property name="caption">
@@ -22,56 +22,7 @@
         <property name="margin">
             <number>0</number>
         </property>
-        <spacer row="2" column="1">
-            <property name="name">
-                <cstring>Spacer12</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Vertical</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>16</width>
-                    <height>812</height>
-                </size>
-            </property>
-        </spacer>
-        <widget class="QPushButton" row="0" column="1">
-            <property name="name">
-                <cstring>addvar_button</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>1</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="text">
-                <string>A&amp;dd / Edit...</string>
-            </property>
-        </widget>
-        <widget class="QPushButton" row="1" column="1">
-            <property name="name">
-                <cstring>removevar_button</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>5</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="text">
-                <string>&amp;Remove</string>
-            </property>
-        </widget>
-        <widget class="QListView" row="0" column="0" rowspan="3" colspan="1">
+        <widget class="QListView" row="0" column="0" rowspan="4" colspan="1">
             <column>
                 <property name="text">
                     <string>Name</string>
@@ -99,7 +50,7 @@
             </property>
             <property name="sizePolicy">
                 <sizepolicy>
-                    <hsizetype>3</hsizetype>
+                    <hsizetype>7</hsizetype>
                     <vsizetype>7</vsizetype>
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
@@ -110,6 +61,71 @@
             </property>
             <property name="resizeMode">
                 <enum>AllColumns</enum>
+            </property>
+        </widget>
+        <widget class="QPushButton" row="2" column="1">
+            <property name="name">
+                <cstring>removevar_button</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>5</hsizetype>
+                    <vsizetype>0</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="text">
+                <string>&amp;Remove</string>
+            </property>
+        </widget>
+        <spacer row="3" column="1">
+            <property name="name">
+                <cstring>Spacer12</cstring>
+            </property>
+            <property name="orientation">
+                <enum>Vertical</enum>
+            </property>
+            <property name="sizeType">
+                <enum>Expanding</enum>
+            </property>
+            <property name="sizeHint">
+                <size>
+                    <width>20</width>
+                    <height>410</height>
+                </size>
+            </property>
+        </spacer>
+        <widget class="QPushButton" row="1" column="1">
+            <property name="name">
+                <cstring>editvar_button</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>1</hsizetype>
+                    <vsizetype>0</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="text">
+                <string>&amp;Edit</string>
+            </property>
+        </widget>
+        <widget class="QPushButton" row="0" column="1">
+            <property name="name">
+                <cstring>addvar_button</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>1</hsizetype>
+                    <vsizetype>0</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="text">
+                <string>A&amp;dd / Copy</string>
             </property>
         </widget>
     </grid>
@@ -127,6 +143,12 @@
         <receiver>EnvironmentVariablesWidgetBase</receiver>
         <slot>removeVarClicked()</slot>
     </connection>
+    <connection>
+        <sender>editvar_button</sender>
+        <signal>clicked()</signal>
+        <receiver>EnvironmentVariablesWidgetBase</receiver>
+        <slot>editVarClicked()</slot>
+    </connection>
 </connections>
 <tabstops>
     <tabstop>listview</tabstop>
@@ -139,6 +161,7 @@
 <slots>
     <slot>addVarClicked()</slot>
     <slot>removeVarClicked()</slot>
+    <slot>editVarClicked()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
